--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rk-form-inputs",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "dist/rk-form-inputs.ssr.js",
   "browser": "dist/rk-form-inputs.esm.js",
@@ -37,6 +37,7 @@
     "rollup": "^2.52.8",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^5.1.9",
+    "tailwindcss": "^3.1.3",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuepress": "1.9.2"
